2002-08-28  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03290] Re: Forward: Bug#157098: wrong file presentation on large files
	* indep.c (strtoclen): need defined()

2002-08-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Debian Bug#157098: wrong file presentation on large files
	  from "Eduard Bloch" <blade@debian.org>
	* configure (clen_t): added
			(HAVE_STRTOLL): added
			(HAVE_STRTOQ): added
			(HAVE_ATOLL): added
			(HAVE_ATOQ): added
	* config.h.dist: ditto
	* file.c (current_content_length): s/int/clen_t/
		(loadGeneralFile): s/atoi/strtoclen/
		(convert_size): s/int/clen_t/
		(convert_size2): s/int/clen_t/
		(showProgress): s/int/clen_t/
		(loadHTMLstream): s/int/clen_t/ linelen, trbyte
		(loadBuffer): ditto
		(getNextPage): s/int/clen_t/ linelen
		(save2tmp): s/int/clen_t/ linelen, trbye
		(_MoveFile): s/int/clen_t/ linelen, trbye
	* fm.h (_Buffer): s/int/clen_t/ linelen, trbye
	* ftp.c (size_int2str): s/long/clen_t/
		(ex_ftpdir_name_size_date): s/long/clen_t/
	* indep.c (strtoclen): added
	* indep.h (strtoclen): added
	* proto.h (showProgress): s/int/clen_t/

2002-07-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Debian Bug#154766: w3m-img: support DirectColor framebuffer visuals?
	  from Colin Watson <cjwatson@debian.org>
	* w3mimg/fb/fb.c (fb_open): accept FB_VISUAL_DIRECTCOLOR

2002-07-30  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03282] Re: w3m-img for framebuffer update
	* w3mimg/fb/fb.c (fb_image_new): ignore no image
					calloc multiple images
			(fb_image_fill): added
			(fb_image_draw): width, height fix
			(fb_image_rotate): fix typo
			(fb_image_copy): added
			(fb_frame_new): added
			(fb_freme_free): added
			(fb_frame_rotate): added
	* w3mimg/fb/fb.h (FB_IMAGE): add num, id, delay
			(fb_frame_new): added
			(fb_frame_free): added
			(fb_frame_rotate): added
	* w3mimg/fb/fb_gdkpixbuf.c (get_image_size): animation support
			(fb_image_load): animation support
			(draw): add bg, x, y, w, h args